# JLSA-Backend

./: .gitignore  README.md  pyproject.toml
jlsa/: manage.py
jlsa/cards/: admin.py  models.py  serializers.py  urls.py  views.py
jlsa/cards/migrations/: 0001_initial.py  0002_rename_dictionary_dictentry_alter_dictentry_options.py  0003_alter_dictentry_options_dictentry_reading_and_more.py  0004_alter_dictentry_definitions_alter_dictentry_reading_and_more.py  0005_tag_card_tags.py  0006_dictentry_cards_dicte_id_7d2e82_idx_and_more.py  0007_tag_user.py  0008_radical_kanji.py  0009_dictentry_kanji.py  0010_remove_kanji_radicals_kanji_name_readings_and_more.py  0011_alter_kanji_options_kanji_cards_kanji_id_f7ccd9_idx_and_more.py  0012_alter_card_tags.py  0013_alter_card_visited.py  0014_remove_card_tags_deck_card_deck_delete_tag.py  0015_card_examples_deck_cover.py  0016_remove_card_deck_deck_cards.py  0017_deckcardrelation_alter_deck_cards.py  0018_remove_card_examples_deckcardrelation_examples.py  0019_remove_deck_cards_remove_deck_parent_alter_deck_name_and_more.py  0020_alter_deck_unique_together.py
jlsa/jlsa/: asgi.py  settings.py  urls.py  wsgi.py
jlsa/parser/: logic.py  serializers.py  urls.py  views.py
jlsa/users/: models.py  serializers.py  urls.py  views.py
jlsa/users/migrations/: 0001_initial.py  0002_user_streak_alter_user_avatar.py
